--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,12 @@
     <artifactId>testDis</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.grapheco</groupId>
+            <artifactId>hippo-rpc</artifactId>
+            <version>0.1.3</version>
+        </dependency>
+    </dependencies>
     
 </project>
