--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,52 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.grapheco</groupId>
-            <artifactId>hippo-rpc</artifactId>
-            <version>0.1.3</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.neo4j.client</groupId>
+            <artifactId>neo4j-browser</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.neo4j.app</groupId>
+
+            <artifactId>neo4j-server</artifactId>
+
+            <version>4.1.2</version>
+
+        </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.json4s</groupId>
+            <artifactId>json4s-native_2.10</artifactId>
+            <version>3.2.11</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
+
     </dependencies>
     
 </project>
